# gridFTPCephPlugin

./: CMakeLists.txt  README  ceph_posix.cpp  ceph_posix.h  dsi_ceph.h  globus_gridftp_server_ceph.c  gridftp.conf
cmake/: Findglobus.cmake  globuscompile.py
testsuite/gridftptests/: GridFTPTestSuite.options  buildCase.py  default.resources
testsuite/gridftptests/gridftp/: basic.input  overwritewithsmaller.input  overwritewithsmaller.output2-before-fix  parallel.input  parallel.output3  readnonexistentfile.input  readnonexistentfile.output0
testsuite/gridftptests/resources/ceph/: rados.input  rados.output0  tags.py
testsuite/gridftptests/resources/gridftp/: tags.py
